Prevent body overflow

--- a/public/global.css
+++ b/public/global.css
@@ -12,6 +12,8 @@
 body {
 	width: 100%;
 	height: 100vh;
+
+	overflow: hidden;
 }
 
 html, body {
